# signaltour

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python-publish.yml
doc/notes/SpectrumAnalysis/: 傅里叶变换的DFT数值近似.md  噪声下功率谱与能量谱估计.md
doc/notes/TimeFreqAnalysis/: 短时傅立叶变换与时频图.md
doc/source/: api.rst  conf.py  index.rst  notes.rst  usage.rst
doc/source/api/: analysis.rst  plot.rst  signal.rst
doc/source/notes/SpectrumAnalysis/: 傅里叶变换的DFT数值近似.md  噪声下功率谱与能量谱估计.md
doc/source/notes/TimeFreqAnalysis/: 短时傅立叶变换与时频图.md
script/: autogenerate_module_doc.py  docstring.py
src/signaltour/: Analysis.py  Plot.py  Signal.py  __init__.py
src/signaltour/_Analysis_Module/: ModeAnalysis.py  SpectrumAnalysis.py  StatsTrendAnalysis.py  TimeFreqAnalysis.py  WaveletAnalysis.py  core.py
src/signaltour/_Assist_Module/: Dependencies.py
src/signaltour/_Plot_Module/: ImagePlot.py  LinePlot.py  PlotPlugin.py  core.py
src/signaltour/_Signal_Module/: SignalFilt.py  SignalRead.py  SignalSample.py  SignalSimulate.py  core.py
test/: conftest.py  test_Analysis.py  test_Signal.py
